# ollama-r-pkg-checker

./: .gitignore  Makefile  Modelfile  README.md  annotated_examples.R  badstyle.md  checklist.md  pyproject.toml  unannotated_examples.R
.devcontainer/: Containerfile  Dockerfile  devcontainer.json
scripts/: chat_with_history.py  example.md  example.qmd  example_rcheck.md  example_rcheck.qmd  example_rcheck_extra.md  example_rcheck_extra.qmd  search_example.py
