[project]
name = "ollama_r_pkg_checker"
version = "0.1.0"
description = "A tool for checking R packages using Ollama"
authors = [
    {name = "George Vega Yon", email = "g.vegayon@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "ollama>=0.6.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.scripts]
ollama-r-pkg-checker = "ollama_r_pkg_checker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


